--- a/testing.ipynb
+++ b/testing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +98,8 @@
     "        t_min_end = 1961\n",
     "        t_max_end = 1.45 * t_min_end\n",
     "        self.endurance_points = 250 * (((t_max_end/time)-1)/((t_max_end/t_min_end)-1))\n",
+    "        if self.endurance_points > 275:\n",
+    "            self.endurance_points = 275;\n",
     "    \n",
     "    def calc_efficiency_points(self, time, efficiency):\n",
     "        endurance_distance = 21.36 # distance of the full course in km\n",
@@ -133,15 +135,26 @@
     "        t_min_skd = 5.12 # fastest skidpad time\n",
     "        t_max_skd = t_min_skd * 1.25\n",
     "        self.skidpad_points = 71.5 * ((t_max_skd/time)**2 - 1)/((t_max_skd/t_min_skd)**2 - 1) + 3.5\n",
+    "        if self.skidpad_points > 75:\n",
+    "            self.skidpad_points = 75;\n",
     "    \n",
     "    def calc_autocross_points(self,time):\n",
     "        t_min_aut = 90 #fastest autocross time\n",
     "        t_max_aut = 1.45 * t_min_aut\n",
     "        self.autocross_points = 118.5 * (((t_max_aut/time)-1)/((t_max_aut/t_min_aut)-1)) + 6.5\n",
+    "        if self.autocross_points > 125:\n",
+    "            self.autocross_points = 125;\n",
     "\n",
     "# Create list to store car objects in\n",
     "cars_list = []"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -153,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +214,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "cars_list.append(Car('UCM23 Standard', 4.885, 4.286, 100.72, 696.64))\n",
     "\n",
     "cars_list.append(Car('UCM24 No Aero', 4.885, 4.16, 100.56, 619.70))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### UCM24 Costing Scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cars_list.append(Car('UCM24 Costing', 4.725, 4.034, 97.99, 768.28))"
    ]
   },
   {
@@ -226,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "        CarConfig    Skidpad       Accel   Autocross   Endurance  Efficiency\n",
-      "0      UCM24 Aero  78.708951   78.411864  111.333852  232.750861   90.758455\n",
+      "0      UCM24 Aero  75.000000   78.411864  111.333852  232.750861   90.758455\n",
       "1            M023  65.285800  100.000000  111.258678  232.589900   57.735362\n",
       "2   UCM23 No Aero  61.856578   62.024293   97.825456  203.827165  100.000000\n",
       "3  UCM23 Standard  65.672685   62.836085  101.135417  210.914335   97.027546\n",
@@ -261,7 +290,7 @@
          },
          "name": "Skidpad",
          "text": [
-          78.70895056577625,
+          75,
           65.2857999496095,
           61.85657784121885,
           65.67268548281353,
@@ -280,7 +309,7 @@
           "Points split"
          ],
          "y": [
-          78.70895056577625,
+          75,
           65.2857999496095,
           61.85657784121885,
           65.67268548281353,
@@ -1346,7 +1375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1360,7 +1389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
